security: remove sensitive keys from template

--- a/env.template
+++ b/env.template
@@ -2,8 +2,8 @@
 SUPABASE_URL=https://pldfzlowvjztaubquapa.supabase.co
 SUPABASE_KEY=sb_publishable_f2-8TWy1yBdBiD0EzLe7CA_6ZXxr7u4
 
-# Gemini API Configuration
-GEMINI_API_KEY=AIzaSyBEYeaySDLw7XzgxSXXy3DwJ-8d2kN3I6g
+GEMINI_API_KEY=your_actual_key_here
+VITE_API_URL=https://your-backend-url.onrender.com
 
 # Backend Configuration
 BACKEND_PORT=8000
